@@ -26,9 +26,7 @@ To do:
 
 7) fix Titanium/USB sous Linux
 
-8) finir la libtifiles2
-
-9) modifier tilp pour la libtifiles2
+8) modifier tilp pour la libtifiles2
 
 
 //------
